Lazarus_Athena/include/Intrinsic.pas


function XtCallConverter(para1:PDisplay; para2:TXtTypeConverter; para3:TXrmValuePtr; para4:TCardinal; para5:TXrmValuePtr; 
               para6:PXrmValue; para7:PXtCacheRef):TBoolean;cdecl;external;
    { event  }
function XtDispatchEvent(para1:PXEvent):TBoolean;cdecl;external;
    { widget  }    { time  }
function XtCallAcceptFocus(para1:TWidget; para2:PTime):TBoolean;cdecl;external;
    { obsolete  }
    { event_return  }
function XtPeekEvent(para1:PXEvent):TBoolean;cdecl;external;
    { app_context  }    { event_return  }
function XtAppPeekEvent(para1:TXtAppContext; para2:PXEvent):TBoolean;cdecl;external;
    { widget  }    { widgetClass  }
function XtIsSubclass(para1:TWidget; para2:TWidgetClass):TBoolean;cdecl;external;
    { object  }
function XtIsObject(para1:TWidget):TBoolean;cdecl;external;
    { implementation-private  }
    { object  }    { type_flag  }
function _XtCheckSubclassFlag(para1:TWidget; para2:TXtXtEnum):TBoolean;cdecl;external;
    { implementation-private  }
    { object  }    { widget_class  }    { flag_class  }    { type_flag  }
function _XtIsSubclassOf(para1:TWidget; para2:TWidgetClass; para3:TWidgetClass; para4:TXtXtEnum):TBoolean;cdecl;external;
    { rectobj  }
function XtIsManaged(para1:TWidget):TBoolean;cdecl;external;
    { widget  }
function XtIsRealized(para1:TWidget):TBoolean;cdecl;external;
    { widget  }
function XtIsSensitive(para1:TWidget):TBoolean;cdecl;external;
    { widget  }    { selection  }    { time  }    { convert  }    { lose  }    { done  }
function XtOwnSelection(para1:TWidget; para2:TAtom; para3:TTime; para4:TXtConvertSelectionProc; para5:TXtLoseSelectionProc; 
               para6:TXtSelectionDoneProc):TBoolean;cdecl;external;
    { widget  }    { selection  }    { time  }    { convert_callback  }    { lose_callback  }    { done_callback  }    { cancel_callback  }    { client_data  }
function XtOwnSelectionIncremental(para1:TWidget; para2:TAtom; para3:TTime; para4:TXtConvertSelectionIncrProc; para5:TXtLoseSelectionIncrProc; 
               para6:TXtSelectionDoneIncrProc; para7:TXtCancelConvertSelectionProc; para8:TXtPointer):TBoolean;cdecl;external;
    { widget  }    { width  }    { height  }    { width_return  }    { height_return  }
function XtMakeResizeRequest(para1:TWidget; para2:TXtDimension; para3:TXtDimension; para4:PDimension; para5:PDimension):TXtGeometryResult;cdecl;external;
    { widget  }    { x  }    { y  }    { rootx_return  }    { rooty_return  }
procedure XtTranslateCoords(para1:TWidget; para2:TXtPosition; para3:TXtPosition; para4:PPosition; para5:PPosition);cdecl;external;
    { dpy  }    { min_keycode_return  }    { keysyms_per_keycode_return  }
function XtGetKeysymTable(para1:PDisplay; para2:PKeyCode; para3:Plongint):PKeySym;cdecl;external;
    { dpy  }    { keysym  }    { keycodes_return  }    { keycount_return  }
procedure XtKeysymToKeycodeList(para1:PDisplay; para2:TKeySym; para3:PPKeyCode; para4:PCardinal);cdecl;external;
    { obsolete  }
    { from_value  }    { to_type  }
procedure XtStringConversionWarning(_XtString:TXconst; _XtString:TXconst);cdecl;external;
    { dpy  }    { from_value  }    { to_type  }
procedure XtDisplayStringConversionWarning(para1:PDisplay; _XtString:TXconst; _XtString:TXconst);cdecl;external;
(* error 
externalref XtConvertArgRec const colorConvertArgs[];
 in declarator_list *)
(* error 
externalref XtConvertArgRec const screenConvertArg[];
 in declarator_list *)
    { obsolete  }
    { app_context  }    { from_type  }    { to_type  }    { converter  }    { convert_args  }    { num_args  }
procedure XtAppAddConverter(para1:TXtAppContext; _XtString:TXconst; _XtString:TXconst; para4:TXtConverter; para5:TXtConvertArgList; 
                para6:TCardinal);cdecl;external;
    { obsolete  }
    { from_type  }    { to_type  }    { converter  }    { convert_args  }    { num_args  }
procedure XtAddConverter(_XtString:TXconst; _XtString:TXconst; para3:TXtConverter; para4:TXtConvertArgList; para5:TCardinal);cdecl;external;
    { from_type  }    { to_type  }    { converter  }    { convert_args  }    { num_args  }    { cache_type  }    { destructor  }
procedure XtSetTypeConverter(_XtString:TXconst; _XtString:TXconst; para3:TXtTypeConverter; para4:TXtConvertArgList; para5:TCardinal; 
                para6:TXtCacheType; para7:TXtDestructor);cdecl;external;
    { app_context  }    { from_type  }    { to_type  }    { converter  }    { convert_args  }    { num_args  }    { cache_type  }    { destructor  }
procedure XtAppSetTypeConverter(para1:TXtAppContext; _XtString:TXconst; _XtString:TXconst; para4:TXtTypeConverter; para5:TXtConvertArgList; 
                para6:TCardinal; para7:TXtCacheType; para8:TXtDestructor);cdecl;external;
    { obsolete  }
    { widget  }    { from_type  }    { from  }    { to_type  }    { to_return  }
procedure XtConvert(para1:TWidget; _XtString:TXconst; para3:PXrmValue; _XtString:TXconst; para5:PXrmValue);cdecl;external;
    { obsolete  }
    { converter  }    { args  }    { num_args  }    { from  }    { to_return  }
procedure XtDirectConvert(para1:TXtConverter; para2:TXrmValuePtr; para3:TCardinal; para4:TXrmValuePtr; para5:PXrmValue);cdecl;external;
    {***************************************************************
     *
     * Translation Management
     *
     *************************************************************** }
    { table  }
function XtParseTranslationTable(_XtString:TXconst):TXtTranslations;cdecl;external;
    { source  }
function XtParseAcceleratorTable(_XtString:TXconst):TXtAccelerators;cdecl;external;
    { widget  }    { translations  }
procedure XtOverrideTranslations(para1:TWidget; para2:TXtTranslations);cdecl;external;
    { widget  }    { translations  }
procedure XtAugmentTranslations(para1:TWidget; para2:TXtTranslations);cdecl;external;
    { destination  }    { source  }
procedure XtInstallAccelerators(para1:TWidget; para2:TWidget);cdecl;external;
    { destination  }    { source  }
procedure XtInstallAllAccelerators(para1:TWidget; para2:TWidget);cdecl;external;
    { widget  }
procedure XtUninstallTranslations(para1:TWidget);cdecl;external;
    { app_context  }    { actions  }    { num_actions  }
procedure XtAppAddActions(para1:TXtAppContext; para2:TXtActionList; para3:TCardinal);cdecl;external;
    { obsolete  }
    { actions  }    { num_actions  }
procedure XtAddActions(para1:TXtActionList; para2:TCardinal);cdecl;external;
    { app_context  }    { proc  }    { client_data  }
function XtAppAddActionHook(para1:TXtAppContext; para2:TXtActionHookProc; para3:TXtPointer):TXtActionHookId;cdecl;external;
    { id  }
procedure XtRemoveActionHook(para1:TXtActionHookId);cdecl;external;
    { widget_class  }    { actions_return  }    { num_actions_return  }
procedure XtGetActionList(para1:TWidgetClass; para2:PXtActionList; para3:PCardinal);cdecl;external;
    { widget  }    { action  }    { event  }    { params  }    { num_params  }
procedure XtCallActionProc(para1:TWidget; _XtString:TXconst; para3:PXEvent; para4:PString; para5:TCardinal);cdecl;external;
    { action_proc  }    { owner_events  }    { event_mask  }    { pointer_mode  }    { keyboard_mode  }
procedure XtRegisterGrabAction(para1:TXtActionProc; para2:TXtBoolean; para3:dword; para4:longint; para5:longint);cdecl;external;
    { dpy  }    { milliseconds  }
procedure XtSetMultiClickTime(para1:PDisplay; para2:longint);cdecl;external;
    { dpy  }
function XtGetMultiClickTime(para1:PDisplay):longint;cdecl;external;
    { event  }    { modifiers_return  }
function XtGetActionKeysym(para1:PXEvent; para2:PModifiers):TKeySym;cdecl;external;
    {**************************************************************
     *
     * Keycode and Keysym procedures for translation management
     *
     *************************************************************** }
    { dpy  }    { keycode  }    { modifiers  }    { modifiers_return  }    { keysym_return  }
procedure XtTranslateKeycode(para1:PDisplay; para2:TXtKeyCode; para3:TModifiers; para4:PModifiers; para5:PKeySym);cdecl;external;
    { dpy  }    { keycode  }    { modifiers  }    { modifiers_return  }    { keysym_return  }
procedure XtTranslateKey(para1:PDisplay; para2:TXtKeyCode; para3:TModifiers; para4:PModifiers; para5:PKeySym);cdecl;external;
    { dpy  }    { proc  }
procedure XtSetKeyTranslator(para1:PDisplay; para2:TXtKeyProc);cdecl;external;
    { dpy  }    { proc  }    { start  }    { stop  }
procedure XtRegisterCaseConverter(para1:PDisplay; para2:TXtCaseProc; para3:TKeySym; para4:TKeySym);cdecl;external;
    { dpy  }    { keysym  }    { lower_return  }    { upper_return  }
procedure XtConvertCase(para1:PDisplay; para2:TKeySym; para3:PKeySym; para4:PKeySym);cdecl;external;
    {***************************************************************
     *
     * Event Management
     *
     *************************************************************** }
    { XtAllEvents is valid only for XtRemoveEventHandler and
     * XtRemoveRawEventHandler; don't use it to select events!
      }
    { was #define dname def_expr }
    function XtAllEvents : TEventMask;      
